# cadquery-freecad-import-plugin

./: environment.yml  pyproject.toml
.github/workflows/: lint.yml  tests.yml
